--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ngx-moment": "^3.5.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
+    "sweetalert2": "^9.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
