--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "file-saver": "^2.0.2",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "ng2-slim-loading-bar": "^4.0.0",
     "ngx-moment": "^3.5.0",
